data/derived/sp14/progs/unify/prog3640.ml.out
Characters 126-128:
  else if List.length l1 < List.length l2 then padZero(0::l1 l2);;
                                                          ^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
